# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  check_mistakes.c  cmd_cd.c  cmd_echo.c  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_export_noargs.c  cmd_pwd.c  cmd_start.c  cmd_unset.c  echo.c  error.c  fd_utils.c  free_struct.c  ft_itoa.c  ft_split.c  get_next_line.c  get_next_line_utils.c  helo l  inits.c  main.c  minishell  minishell.c  minishell.h  minishell_guide_jeldora  pars_command.c  pars_dollar.c  pars_env.c  pars_escaping.c  pars_lib_utils.c  pars_pipes.c  pars_redirect.c  pars_structs_utils.c  pars_tockens.c  parse_quotes.c  parser.c  (+6 more)
cmd_srcs/: cmd_cd.c  cmd_cd_utils.c  cmd_echo.c  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_export_noargs.c  cmd_pwd.c  cmd_start.c  cmd_unset.c  cmd_utils.c  error.c  fd_utils.c  minishell.c  signal.c
headers/: get_next_line.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_unint.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_strcat_bonus.c  ft_strchr.c  ft_strcmp_bonus.c  ft_strcpy_bonus.c  ft_strdup.c  (+35 more)
minishell.dSYM/Contents/Resources/DWARF/: minishell
parser_srsc/: check_mistakes.c  free_struct.c  free_struct_2.c  ft_itoa.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  inits.c  inits_2.c  pars_command.c  pars_dollar.c  pars_env.c  pars_escaping.c  pars_lib_utils.c  pars_pipes.c  pars_redirect.c  pars_structs_utils.c  pars_tocken_utils.c  pars_tockens.c  parse_quotes.c  parser.c  redirect.c  sys_mistakes_utils.c
